--- a/src/nezet/AutoGui.form
+++ b/src/nezet/AutoGui.form
@@ -63,16 +63,25 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Autok amiben lehet doh&#xe1;nyozni"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mnuDohanyzoActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="mnuleghosszabFuv">
               <Properties>
                 <Property name="text" type="java.lang.String" value="auto a leghosszabb fuvarral"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mnuleghosszabFuvActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="mnuDolgozott">
               <Properties>
                 <Property name="text" type="java.lang.String" value="2022.12.31-ei dolgoz&#xf3;k"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mnuDolgozottActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
@@ -108,23 +117,24 @@
                   <Group type="102" attributes="0">
                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="txtDatum" pref="127" max="32767" attributes="0"/>
+                      <Component id="txtDatum" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="cmbRendszam" min="-2" max="-2" attributes="0"/>
+                      <Component id="cmbRendszam" min="-2" pref="103" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="18" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
           </Group>
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Group type="102" attributes="0">
                       <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="txtFiz_Mod" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtFiz_Mod" min="-2" pref="119" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
@@ -135,9 +145,9 @@
                       </Group>
                       <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="txtOssz" min="-2" max="-2" attributes="0"/>
-                          <Component id="txtTav" min="-2" max="-2" attributes="0"/>
-                          <Component id="txtBorr" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtTav" alignment="0" max="32767" attributes="0"/>
+                          <Component id="txtOssz" alignment="0" max="32767" attributes="0"/>
+                          <Component id="txtBorr" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
